docs: 更新README添加效果展示并删除发布指南
添加屏幕截图和OCR识别效果展示到README文档
删除不再需要的PUBLISH_GUIDE.md文件
更新pyproject.toml版本号至0.0.3并优化构建配置

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "computer-control-mcp-lands"
-version = "0.0.1"
+version = "0.0.3"
 description = "MCP server that provides computer control capabilities, like mouse, keyboard, OCR, etc. using PyAutoGUI, RapidOCR, ONNXRuntime. Similar to 'computer-use' by Anthropic. With Zero External Dependencies."
 readme = "README.md"
 requires-python = ">=3.12"
@@ -43,13 +43,16 @@ computer-control-mcp-server = "computer_control_mcp.server:main"
 [tool.hatch.build.targets.wheel]
 packages = ["src/computer_control_mcp"]
 
+[tool.hatch.build.targets.sdist]
+include = [
+    "/src",
+    "/README.md",
+    "/LICENSE",
+]
+
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 python_files = "test_*.py"
 python_classes = "Test*"
 python_functions = "test_*"
-
-[tool.hatch.build]
-sources = ["src"]
-packages = ["src/computer_control_mcp"]
 
